--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,8 @@ body {
   margin: 0;
 }
 
-p {
-  color: green;
+.bubble {
+  background-color: #efefef;
+  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.32);
+  padding: 1rem;
 }
