--- a/app/sprints/sprint.css
+++ b/app/sprints/sprint.css
@@ -1,3 +1,51 @@
+
+
+.complete {
+  display: inline-block;
+  align-items: center;
+  background-color: #ffffff;
+  border: 1px solid;
+  border-color: green;
+  padding: 2;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  border-radius: 8px;
+  margin-bottom: 1rem;
+  width: 325px;
+  min-width: 325px;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
+.box-noscroll {
+  display: flex;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.32);
+}
+
+
+
+
+.box-scroll {
+  display: flex;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.32);
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+}
+
+.done {
+  display: inline-block;
+  background-color: green;
+  color: white; 
+  padding: .25rem .5rem;
+  border: 1px solid;
+  border-radius: 1rem;
+}
+
 .tasks {
     display: flex;
     flex-flow: row nowrap;
