edited border and padding in sprints page

--- a/app/sprints/sprint.css
+++ b/app/sprints/sprint.css
@@ -5,8 +5,7 @@
   align-items: center;
   background-color: #ffffff;
   border: 1px solid;
-  border-color: green;
-  padding: 2;
+  border-color: black;
   padding-top: 1em;
   padding-bottom: 1em;
   border-radius: 8px;
